--- a/_includes/head-custom.html
+++ b/_includes/head-custom.html
@@ -1,5 +1,9 @@
 <!-- start custom head snippets, customize with your own _includes/head-custom.html file -->
 
+<link rel="canonical" href="https://mayankvikash.in/" />
+
+
+
 <!-- Setup Google Analytics -->
 {% include head-custom-google-analytics.html %}
 
